--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<meta property="og:url" content="https://github.com/carles9000/mercury.v2">
 	<meta property="og:site_name" content="MERCURY V2">
 	<meta property="og:title" content="Mercury for modHarbour v2">
-	<meta property="og:description" content="The easiest way to design screens for mod Harbour V2 on the Web">
+	<meta property="og:description" content="Mercury es el primer framework para construir aplicaciones web usando MVC (Modelo/Vista/Controlador)">
 	<meta property="og:image" content="https://raw.githubusercontent.com/carles9000/pool/master/pool/mini-mercury.png">	
 	
 	<link rel="icon" href="image/mini-mercury.png" type="image/x-icon" >
