--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		</div>
 	</h1>
 		
-  <p class="lead">La manera mas fácil de trabajar <b>MVC</b> (Modelo/Vista/Controlador) con <span><a target="_blank_" href="https://github.com/mod-harbour/mod_harbour.v2">mod Harbour V2</a></span> en la Web</p>
+  <p class="lead">La manera mas fácil de trabajar <b>MVC</b> (Modelo/Vista/Controlador) con <span><a target="_blank_" href="https://mod-harbour.com/modharbour.v2">mod Harbour V2</a></span> en la Web</p>
   <hr>
 
   <div class="panel-group" id="accordion">    
