--- a/index_en.html
+++ b/index_en.html
@@ -42,7 +42,7 @@
 		</div>
 	</h1>
 		
-  <p class="lead">The easiest way to work <b>MVC</b> (Model/View/Controller) with <span><a target="_blank_" href="https://github.com/mod-harbour/mod_harbour.v2">mod Harbour V2</a></span> in the Web</p>
+  <p class="lead">The easiest way to work <b>MVC</b> (Model/View/Controller) with <span><a target="_blank_" href="https://mod-harbour.com/modharbour.v2">mod Harbour V2</a></span> in the Web</p>
   <hr>
 
   <div class="panel-group" id="accordion">    
